--- a/app/style.css
+++ b/app/style.css
@@ -11,12 +11,14 @@
 
 html,
 body {
+    height: 100%;
     padding: 0;
     margin: 0;
     font-family: "Segoe UI", sans-serif;
     background-color: var(--bg-light);
     color: var(--text-light);
     transition: background-color 0.4s ease, color 0.4s ease;
+    overflow: hidden; /* Removes scrollbar */
 }
 
 .dark {
@@ -26,13 +28,18 @@ body {
 
 /* Layout */
 .main-container {
-    min-height: 100vh;
+    min-height: 100%;
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
     background-color: inherit;
     transition: background-color 0.5s ease, color 0.5s ease;
-    padding: 1.5rem;
+    padding: 0.8rem;
 }
 
 .header {
@@ -122,7 +129,7 @@ html.dark .feature-box {
     font-size: 0.9rem;
     padding: 1rem 0;
     border-top: 1px solid var(--border-color);
-    margin-top: 3rem;
+    
 }
 
 /* Animations */
